# VibeBfx

./: .gitignore  README.md  pyproject.toml
tests/: test_basic.py  test_pipeline.py  test_planner.py
vibe_bfx/: __init__.py  agents.py  celery_app.py  cli.py  prefect.py  project.py  task.py  worker.py
